--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Produk</a></li>
-                <li><a href="#">Resep</a></li>
-                <li><a href="#">Tips Baking</a></li>
-                <li><a href="#">Tentang Kami</a></li>
+                <li><a href="#Produk">Produk</a></li>
+                <li><a href="#Resep">Resep</a></li>
+                <li><a href="#Resep">Tips Baking</a></li>
+                <li><a href="#TentangKami">Tentang Kami</a></li>
             </ul>
-            <div class="logo">CakeMart</div>
+            <div class="logo">ToBaKu</div>
             <button class="login-btn">Masuk</button>
         </nav>
     </header>
@@ -30,9 +30,10 @@
             <p>"Dari tepung premium hingga dekorasi cantik — semua kebutuhan baking Anda ada di sini."</p>
             <button class="cta-btn">Mulai Belanja</button>
           </div>
-      
           <div class="hero-image">
-            <div class="browser-window"></div>
+            <div class="browser-window">
+                <img src="images/toko4.jpeg">
+            </div>
             <div class="background-shapes">
               <div class="circle large"></div>
               <div class="triangle top"></div>
@@ -51,39 +52,46 @@
         <h2>"Dipercaya oleh Ribuan Home Baker & UMKM Se-Indonesia"</h2>
         <p>Kami hadir untuk mendukung perjalanan baking Anda, dari dapur rumahan hingga usaha profesional.</p>
         <div class="cards">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
+            <div class="card">
+                <img src="images/homebaker1.jpg" alt="homebaker1">
+            </div>
+            <div class="card">
+                <img src="images/homebaker2.jpg" alt="homebaker2">
+            </div>
+            <div class="card">
+                <img src="images/homebaker5.jpg" alt="homebaker">
+            </div>
+            <div class="card">
+                <img src="images/homebaker4.jpg" alt="homebaker4">
+            </div>
         </div>
     </section>
 
-    <!-- Feature Section 1 -->
-    <section class="feature-section feature-1">
-        <div class="feature-content">
-            <h2>"Bahan Lengkap & Terjangkau"</h2>
-            <p>Dari bahan pokok seperti terigu, cokelat, dan mentega, hingga dekorasi fondant dan sprinkle lucu.</p>
-            <ul>
-                <li>Harga grosir & eceran</li>
-                <li>Kualitas food-grade terpercaya</li>
-                <li>Banyak varian merek & ukuran</li>
-            </ul>
-        </div>
-        <div class="feature-graphic">
-            <div class="graphic-circle small"></div>
-            <div class="graphic-square"></div>
-            <div class="graphic-circle large"></div>
-            <div class="graphic-triangle"></div>
-        </div>
-    </section>
+        <!-- Feature Section 1 -->
+        <section id="TentangKami" class="feature-section feature-1">
+            <div class="feature-content">
+                <h2>"Bahan Lengkap & Terjangkau"</h2>
+                <p>Dari bahan pokok seperti terigu, cokelat, dan mentega, hingga dekorasi fondant dan sprinkle lucu.</p>
+                <ul>
+                    <li>Harga grosir & eceran</li>
+                    <li>Kualitas food-grade terpercaya</li>
+                    <li>Banyak varian merek & ukuran</li>
+                </ul>
+            </div>
+            <div class="feature-graphic">
+                <img src="images/toko5.jpg" alt="toko5">
+            </div>
+        </section>
 
     <!-- Feature Section 2 -->
-    <section class="feature-section feature-2">
+    <section id="Produk" class="feature-section feature-2">
     <div class="feature-wrapper">
       <!-- KIRI -->
       <div class="kiri">
         <div class="bentuk">
-          <div class="kotak"></div>
+          <div class="kotak">
+            <img src="images/belanjaonline2.jpg" alt="belanjaonline2" class="gambar-kotak">
+          </div>
         </div>
       </div>
   
@@ -109,7 +117,9 @@
         </div>
         <div class="value-image">
             <div class="image-bg"></div>
-            <div class="image-placeholder"></div>
+            <div class="image-placeholder">
+                <img src="images/baking.jpeg" alt="baking" class="value-img">
+            </div>
         </div>
     </section>
 
@@ -125,23 +135,29 @@
     </section>
 
     <!-- Value Cards Section -->
-    <section class="value-cards-section">
+    <section id="Resep" class="value-cards-section">
         <h1>Resep dan Inspirasi</h1>
         <div class="value-cards">
             <div class="value-card">
-                <div class="card-image"></div>
+                <div class="card-image">
+                    <img src="images/brownies.jpeg" alt="brownies">
+                </div>
                 <p>"Resep Brownies Lumer Anti Gagal"</p>
-                <a href="#" class="learn-more-link">Pelajari Lebih Lanjut</a>
+                <a href="https://youtu.be/1D4a4k98btk" target="_blank" class="learn-more-link">Pelajari Lebih Lanjut</a>
             </div>
             <div class="value-card">
-                <div class="card-image"></div>
+                <div class="card-image">
+                    <img src="images/tepung.jpeg" alt="tepung">
+                </div>
                 <p>"Tips Memilih Tepung Terigu yang Tepat"</p>
-                <a href="#" class="learn-more-link">Pelajari Lebih Lanjut</a>
+                <a href="https://youtu.be/Mxdsvm8trw8" target="_blank" class="learn-more-link">Pelajari Lebih Lanjut</a>
             </div>
             <div class="value-card">
-                <div class="card-image"></div>
+                <div class="card-image">
+                    <img src="images/pack.jpeg" alt="packing">
+                </div>
                 <p>"Cara Mengemas Kue untuk Jualan Online"</p>
-                <a href="#" class="learn-more-link">Pelajari Lebih Lanjut</a>
+                <a href="https://youtu.be/CuxhKlatkl0" target="_blank" class="learn-more-link">Pelajari Lebih Lanjut</a>
             </div>
         </div>
     </section>
@@ -162,14 +178,6 @@
                 <li><a href="#">Product</a></li>
                 <li><a href="#">Product</a></li>
                 <li><a href="#">Product</a></li>
-            </ul>
-        </div>
-        <div class="footer-column">
-            <h3>Company</h3>
-            <ul>
-                <li><a href="#">Company</a></li>
-                <li><a href="#">Company</a></li>
-                <li><a href="#">Company</a></li>
             </ul>
         </div>
         <div class="footer-bottom">
